{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 218,
  "lineage": "3b47772d-0f33-a762-bdfb-699e3e523d9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dpt12-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0076124bb8404bf83",
            "arn": "arn:aws:ec2:us-east-1:471112568850:elastic-ip/eipalloc-0076124bb8404bf83",
            "domain": "vpc",
            "id": "eipalloc-0076124bb8404bf83",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-233-160-2.compute-1.amazonaws.com",
            "public_ip": "3.233.160.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AWSB56-ublic-Linux2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:471112568850:instance/i-0658772812f078566",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0658772812f078566",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "AWSB56Key-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0892df57982d675e1",
            "private_dns": "ip-192-168-1-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.100",
            "public_dns": "ec2-3-87-187-74.compute-1.amazonaws.com",
            "public_ip": "3.87.187.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dedb575ee5b7cd20",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d23cc34e92ecc6ea",
            "tags": {
              "Name": "K8s-worker1"
            },
            "tags_all": {
              "Name": "K8s-worker1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007a823c317607ccc"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWSB56Key-kp",
            "aws_security_group.dpt12_sg",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc",
            "tls_private_key.AWSB56Key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AWSB56-ublic-Linux3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:471112568850:instance/i-0ac648ee29a763742",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac648ee29a763742",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "AWSB56Key-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d3f14d1e9014a5e",
            "private_dns": "ip-192-168-1-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.161",
            "public_dns": "ec2-174-129-63-83.compute-1.amazonaws.com",
            "public_ip": "174.129.63.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aca057b90aa2b71c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d23cc34e92ecc6ea",
            "tags": {
              "Name": "K8s-worker2"
            },
            "tags_all": {
              "Name": "K8s-worker2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007a823c317607ccc"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWSB56Key-kp",
            "aws_security_group.dpt12_sg",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc",
            "tls_private_key.AWSB56Key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AWSB56-ubuntu-Linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:471112568850:instance/i-093766998e2230671",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093766998e2230671",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "AWSB56Key-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07f5f132ca2af183d",
            "private_dns": "ip-192-168-1-122.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.122",
            "public_dns": "ec2-18-206-140-111.compute-1.amazonaws.com",
            "public_ip": "18.206.140.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04da176642b4767fe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d23cc34e92ecc6ea",
            "tags": {
              "Name": "K8s-Control"
            },
            "tags_all": {
              "Name": "K8s-Control"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007a823c317607ccc"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWSB56Key-kp",
            "aws_security_group.dpt12_sg",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc",
            "tls_private_key.AWSB56Key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dpt12-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112568850:internet-gateway/igw-0e597d1258f566478",
            "id": "igw-0e597d1258f566478",
            "owner_id": "471112568850",
            "tags": {
              "name": "dpt12-internet gateway"
            },
            "tags_all": {
              "name": "dpt12-internet gateway"
            },
            "vpc_id": "vpc-0923e240ffe91605e"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dpt12-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0076124bb8404bf83",
            "association_id": "eipassoc-038c1b0a37e31dfc6",
            "connectivity_type": "public",
            "id": "nat-0bf29a50fee271644",
            "network_interface_id": "eni-0eca232bc490928f8",
            "private_ip": "192.168.1.203",
            "public_ip": "3.233.160.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d23cc34e92ecc6ea",
            "tags": {
              "name": "dpt12 NAT Gateway"
            },
            "tags_all": {
              "name": "dpt12 NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112568850:route-table/rtb-04fdae6c6cf6a5924",
            "id": "rtb-04fdae6c6cf6a5924",
            "owner_id": "471112568850",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0bf29a50fee271644",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private RT"
            },
            "tags_all": {
              "Name": "private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0923e240ffe91605e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_nat_gateway.dpt12-ngw",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112568850:route-table/rtb-056b4a305bc678512",
            "id": "rtb-056b4a305bc678512",
            "owner_id": "471112568850",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e597d1258f566478",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public RT"
            },
            "tags_all": {
              "Name": "public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0923e240ffe91605e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dpt12-igw",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpt12-private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c292c0bbe6cffe20",
            "route_table_id": "rtb-04fdae6c6cf6a5924",
            "subnet_id": "subnet-0ad34d2da0dd5ad5a"
          },
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_nat_gateway.dpt12-ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpt12-public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c264643e8eb9385",
            "route_table_id": "rtb-056b4a305bc678512",
            "subnet_id": "subnet-0d23cc34e92ecc6ea"
          },
          "dependencies": [
            "aws_internet_gateway.dpt12-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dpt12_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112568850:security-group/sg-007a823c317607ccc",
            "description": "dpt06-sg",
            "egress": [],
            "id": "sg-007a823c317607ccc",
            "ingress": [],
            "name": "dpt06-sg",
            "name_prefix": "",
            "owner_id": "471112568850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DPT12-SG"
            },
            "tags_all": {
              "Name": "DPT12-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0923e240ffe91605e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound SSH access",
            "from_port": 22,
            "id": "sgrule-1857711507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-007a823c317607ccc",
            "security_group_rule_id": "sgr-068e97631526597ba",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound HTTP access",
            "from_port": 80,
            "id": "sgrule-667930584",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-007a823c317607ccc",
            "security_group_rule_id": "sgr-0432e19233e6335a2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound HTTPs access",
            "from_port": 443,
            "id": "sgrule-468069109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-007a823c317607ccc",
            "security_group_rule_id": "sgr-06a440d0eb33a635b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound RDP access",
            "from_port": 3389,
            "id": "sgrule-1641481283",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-007a823c317607ccc",
            "security_group_rule_id": "sgr-0395d7acb900e75de",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbounoutboubd all access",
            "from_port": 0,
            "id": "sgrule-2051065425",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-007a823c317607ccc",
            "security_group_rule_id": "sgr-09d7cdebb9b2e28ff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound ICMP access",
            "from_port": -1,
            "id": "sgrule-1122827464",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-007a823c317607ccc",
            "security_group_rule_id": "sgr-0e46fa8e441215009",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112568850:subnet/subnet-0ad34d2da0dd5ad5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad34d2da0dd5ad5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112568850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0923e240ffe91605e"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112568850:subnet/subnet-0d23cc34e92ecc6ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d23cc34e92ecc6ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112568850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0923e240ffe91605e"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dpt12-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112568850:vpc/vpc-0923e240ffe91605e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-018a5bdbec2d1e7d9",
            "default_route_table_id": "rtb-08649c425a9521d61",
            "default_security_group_id": "sg-003abbbbc7e24ace8",
            "dhcp_options_id": "dopt-0b4539e06b8b8009a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0923e240ffe91605e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08649c425a9521d61",
            "owner_id": "471112568850",
            "tags": {
              "Name": "dpt12-vpc"
            },
            "tags_all": {
              "Name": "dpt12-vpc"
            }
          }
        }
      ]
    }
  ]
}